# DSCSPluginTemplate

./: CMakeLists.txt
DSCSPluginTemplate/: CMakeLists.txt  DSCSPluginTemplate.cpp
src/: DSCSPluginTemplate.cpp
